// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon Backgrounds story 1 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    disabled={false}
    onClick={[Function]}
    style={Object {}}
  >
    You should be able to switch backgrounds for this story
  </button>
</div>
`;

exports[`Storyshots Addon Backgrounds story 2 1`] = `
<div
  style={
    Object {
      "background": "transparent",
      "backgroundPosition": "center",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 0.25s ease-in-out",
    }
  }
>
  <button
    disabled={false}
    onClick={[Function]}
    style={Object {}}
  >
    This one too!
  </button>
</div>
`;
